# LogicEFTBot

./: .gitignore  Makefile  README.md  bot.py  cooldown.py  discordbot.py  localizations.json  mypy.ini  pyproject.toml  seed.db  settings.json  settings.py  twitch-master.py  twitch.py  twitch_bot.py  twitch_master.py
bot/: base.py  bot.py  broadcast.py  config.py  database.py  eft.py  log.py  models.py  shardupdate.py
logiceftbot/common/: base.py  bot.py  config.py  database.py  eft.py  log.py  models.py
logiceftbot/discord/: discordbot.py
logiceftbot/twitch/: cooldown.py  twitch-master.py  twitch.py  twitch_test.py
tests/: bot.py  dbutil.py  network.py
tests/integration/: chatmember.py  test.py  twitch.py
tests/unit/: bot.py
